@@ -1,14 +1,15 @@
 package pl.coderslab.wrkt_springboot_backend.plan;
 
+import jakarta.servlet.http.HttpServletRequest;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestBody;
+import pl.coderslab.wrkt_springboot_backend.session.InMemorySessionRegistry;
 import pl.coderslab.wrkt_springboot_backend.user.User;
 import pl.coderslab.wrkt_springboot_backend.user.UserRepository;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -16,23 +17,31 @@ public class PlanService {
 
     private final PlanRepository planRepository;
     private final UserRepository userRepository;
+    private final PlanMapper planMapper;
+    private final InMemorySessionRegistry registry;
 
     @Autowired
-    public PlanService(PlanRepository planRepository, UserRepository userRepository) {
+    public PlanService(PlanRepository planRepository, UserRepository userRepository, PlanMapper planMapper, InMemorySessionRegistry registry) {
         this.planRepository = planRepository;
         this.userRepository = userRepository;
+        this.planMapper = planMapper;
+        this.registry = registry;
     }
 
-    public List<Plan> getPlans(){
-        return planRepository.findAll().stream()
+    public List<PlanDTO> getPlans(HttpServletRequest request){
+        String userName = registry.getUserNameForSession(request.getHeader("Authorization"));
+        User user = userRepository.findByName(userName);
+        return planRepository.findByUser(user).stream()
                 .filter(plan -> !plan.isDeleted())
-                .toList();
+                .map(planMapper::mapToPlanDTO)
+                .collect(Collectors.toList());
     }
 
-    public String addPlan(Plan plan){
+    public String addPlan(PlanDTO planDTO){
+        Plan plan = planMapper.mapToPlan(planDTO);
         User user = userRepository.findByName(plan.getUser().getName());
         plan.setUser(user);
-        return "New plan saved: " + planRepository.save(plan);
+        return "New plan saved: " + planRepository.save(plan).getName();
     }
 
     public void removePlan(Long id){
